# slac-binding-rs

./: Cargo.toml  Fulup-README  README.md  tatus
afb-binding/: Cargo.toml
afb-binding/etc/: binder-slac.json  binding-am62x.json  binding-i2c.json  binding-slac.json  binding-test.json  binding-test.sh  start-binder.sh
afb-binding/src/: binding.rs  libso.rs  verbs.rs
afb-test/: Cargo.toml
afb-test/etc/: README.md  binding-test-slac.json  binding-test-slac.sh  client-eth2-del.sh  client-eth2-tap.sh  server-eth2-tap.sh
afb-test/src/: libso.rs  slac-test.rs
afb-test/trace-logs/: phytec-power-pcltool.pcapng
afb-types/: Cargo.toml
afb-types/etc/: build.rs
afb-types/src/: am62x-types.rs  libso.rs  slac-types.rs
slac-lib/: Cargo.toml
slac-lib/capi/: build.rs  capi-map.h  capi-mod.rs
slac-lib/src/: config.rs  lib.rs  manager.rs  messages.rs  session.rs
