[package]
name = "slac"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
sha2={ version= "0"}
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
typesv4= {path ="../afb-types"}

[build-dependencies]
bindgen    = ">=0.6"
cc = "1"

[lib]
name = "slac"
crate-type = ["lib"]
path = "src/lib.rs"


